--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "private",
   "dependencies": {
     "wechaty":"0.22.4",
+    "wechaty-puppet-puppeteer":"0.14.2"
     "babel-register": "^6.26.0",
     "dingtalk-robot": "^1.0.3",
     "fastify": "^1.13.0",
